[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/components/RacePreview.gd" id="1_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.117647, 0.137255, 0.156863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.0784314, 0.0941176, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="RacePreviewPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 110
theme_override_colors/font_color = Color(0.901961, 0.721569, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "CHOOSE YOUR RACE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Select a race"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="RaceNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 140
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="SpeedSizeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 48

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/SpeedSizeContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.83, 0.83, 0.83, 1)
horizontal_alignment = 1

[node name="SizeLabel" type="Label" parent="MarginContainer/VBoxContainer/SpeedSizeContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.83, 0.83, 0.83, 1)
horizontal_alignment = 1

[node name="Spacer2b" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
theme_override_font_sizes/normal_font_size = 32
theme_override_colors/default_color = Color(0.83, 0.83, 0.83, 1)
text = ""
autowrap_mode = 3

[node name="Spacer2c" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="AbilityScoresLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
theme_override_font_sizes/normal_font_size = 36
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
text = ""
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="FeaturesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_colors/font_color = Color(0.901961, 0.721569, 0, 1)
text = "Features"

[node name="FeaturesScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RaceFeaturesList" type="ItemList" parent="MarginContainer/VBoxContainer/FeaturesScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2")
theme_override_font_sizes/font_size = 36
auto_height = true
